--- a/src/Services/Core.API/Core.API.csproj
+++ b/src/Services/Core.API/Core.API.csproj
@@ -19,6 +19,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Business\Queries\Queries.csproj" />
 	  <ProjectReference Include="..\..\Business\State\State.csproj" />
+	  <ProjectReference Include="..\..\Infrastructure\Persistence\Persistence.csproj" />
 	</ItemGroup>
 
 </Project>
