--- a/src/Infrastructure/Persistence/Persistence.csproj
+++ b/src/Infrastructure/Persistence/Persistence.csproj
@@ -4,8 +4,15 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="Src\" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.17" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.23" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.23" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.23" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Domain\Objects\Objects.csproj" />
+	</ItemGroup>
 
 </Project>
