--- a/src/Business/Queries/Queries.csproj
+++ b/src/Business/Queries/Queries.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\Environment\Environment.csproj" />
+    <ProjectReference Include="..\..\Domain\Objects\Objects.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Persistence\Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
