--- a/src/Business/State/State.csproj
+++ b/src/Business/State/State.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,6 +6,8 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Domain\Environment\Environment.csproj" />
+	  <ProjectReference Include="..\..\Domain\Objects\Objects.csproj" />
+	  <ProjectReference Include="..\..\Infrastructure\Persistence\Persistence.csproj" />
 	</ItemGroup>
 
 </Project>
