--- a/src/Services/Core.API/Core.API.csproj
+++ b/src/Services/Core.API/Core.API.csproj
@@ -15,10 +15,11 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.23" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="3.1.0" />
-		<PackageReference Include="NSwag.AspNetCore" Version="13.15.10" />
+		<PackageReference Include="NSwag.AspNetCore" Version="13.15.10" />	
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Business\Processing\Processing.csproj" />
 	  <ProjectReference Include="..\..\Business\Queries\Queries.csproj" />
 	  <ProjectReference Include="..\..\Business\State\State.csproj" />
 	  <ProjectReference Include="..\..\Infrastructure\Persistence\Persistence.csproj" />
