--- a/src/Business/Processing/Processing.csproj
+++ b/src/Business/Processing/Processing.csproj
@@ -9,6 +9,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Domain\Environment\Environment.csproj" />
 	  <ProjectReference Include="..\..\Domain\Objects\Objects.csproj" />
 	  <ProjectReference Include="..\..\Infrastructure\Persistence\Persistence.csproj" />
 	</ItemGroup>
