--- a/src/Services/Core.API/Core.API.csproj
+++ b/src/Services/Core.API/Core.API.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.23" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="3.1.0" />
+		<PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0" />
 		<PackageReference Include="NSwag.AspNetCore" Version="13.15.10" />	
 	</ItemGroup>
 
