--- a/src/Services/Core.API/Core.API.csproj
+++ b/src/Services/Core.API/Core.API.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.23" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="3.1.0" />
 		<PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
 		<PackageReference Include="NSwag.AspNetCore" Version="13.15.10" />	
