--- a/src/Domain/Environment/Environment.csproj
+++ b/src/Domain/Environment/Environment.csproj
@@ -8,10 +8,18 @@
 		<PackageReference Include="MediatR" Version="10.0.1" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
 		<PackageReference Include="NLog" Version="4.7.15" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Objects\Objects.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Src\Implementation\" />
+	  <None Remove="Newtonsoft.Json" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Src\Implementation\" />
+	</ItemGroup>
 </Project>
