--- a/src/Business/Processing/Processing.csproj
+++ b/src/Business/Processing/Processing.csproj
@@ -5,22 +5,9 @@
   </PropertyGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\..\Scheduler\Scheduler.csproj" />
 	  <ProjectReference Include="..\..\Domain\Environment\Environment.csproj" />
 	  <ProjectReference Include="..\..\Domain\Objects\Objects.csproj" />
 	  <ProjectReference Include="..\..\Infrastructure\Persistence\Persistence.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Remove="Src\" />
-	  <None Remove="Src\Jobs\" />
-	  <None Remove="Src\Listeners\" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Src\" />
-	  <Folder Include="Src\Jobs\" />
-	  <Folder Include="Src\Listeners\" />
-	</ItemGroup>
-	<ItemGroup>
-	  <PackageReference Include="Quartz" Version="3.4.0" />
 	</ItemGroup>
 </Project>
