--- a/src/Infrastructure/Persistence/Persistence.csproj
+++ b/src/Infrastructure/Persistence/Persistence.csproj
@@ -9,10 +9,18 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.23" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.23" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.23" />
+		<PackageReference Include="System.Reactive" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Domain\Objects\Objects.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Src\Events\" />
+	  <None Remove="System.Reactive" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Src\Events\" />
+	</ItemGroup>
 </Project>
