Update classes due to caches

--- a/src/Infrastructure/Persistence/Persistence.csproj
+++ b/src/Infrastructure/Persistence/Persistence.csproj
@@ -20,5 +20,9 @@
 	<ItemGroup>
 	  <None Remove="Src\Events\" />
 	  <None Remove="System.Reactive" />
+	  <None Remove="Src\Store\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Src\Store\" />
 	</ItemGroup>
 </Project>
