--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "rxjs": "~7.5.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@ngx-formly/core": "^6.0.0-next"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.1",
     "@angular/cli": "~13.3.1",
     "@angular/compiler-cli": "~13.3.0",
+    "@ngx-formly/schematics": "^6.0.0-next.9",
     "@types/node": "^12.11.1",
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
