--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "~13.3.0",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4",
-    "@ngx-formly/core": "^6.0.0-next"
+    "@ngx-formly/core": "^5.10.33",
+    "@ngx-formly/material": "^5.10.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.1",
