--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "rxjs": "~7.5.0",
-    "zone.js": "~0.11.4",
     "@ngx-formly/core": "^5.10.33",
-    "@ngx-formly/material": "^5.10.1"
+    "@ngx-formly/material": "^5.10.1",
+    "rxjs": "~7.5.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.1",
