--- a/src/Tests/Integration/Integration.csproj
+++ b/src/Tests/Integration/Integration.csproj
@@ -10,9 +10,11 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Bogus" Version="34.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Src\" />
+    <None Remove="Bogus" />
   </ItemGroup>
 </Project>
